--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -29,32 +29,217 @@
     <section class="hero">
       <h3>Reader’s Realm</h3>
       <p>Explore trending thoughts, smart ideas, and original articles you’ll love.</p>
-      <!-- <img class = "hero-img" src="/assets/img/your-image.jpg" alt="Passion fruit and floral drink on a surface" /> -->
+      <!-- <img class="hero-img" src="/assets/img/your-image.jpg" alt="Passion fruit and floral drink on a surface" /> -->
     </section>
 
-    <!-- Blog content goes here -->
-    <section class="blog-preview">
-
+    <!-- Blog of the Month -->
+    <section class="blog-preview"
+      style="background-image: url('/assets/img/blog-month-bg.jpg'); background-size: cover; background-position: center;">
       <div class="blogs-section-menu">
-        <div id="nature">
-          <img class="blogs-section-img" src="" alt="">
-          <h2>Nature and You</h2>
-          <p class="blogs-section-desc">Sustainable living is need of the hour.</p>
-          <p class="blogs-section-desc">In an age of mounting environmental challenges, sustainable living has evolved from a choice to an urgent necessity. It’s about making conscious decisions—opting for energy-efficient solutions, reducing waste, embracing eco-friendly materials, and nurturing habits that protect our planet’s resources. From the food we consume to the technologies we use, every small shift can create a ripple effect of positive change. Adopting a sustainable lifestyle doesn’t mean sacrificing comfort; it means redefining it through balance, innovation, and responsibility. The future we envision starts today—with thoughtful action and a deep respect for the world we inhabit.</p>
-          <a href="blogs.html" class="btn">Read here</a>
+        <div id="month">
+          <!-- <img class="blogs-section-img" src="" alt=""> -->
+          <h2 class="blogs-month-heading">Blog of the Month</h2>
+          <p class="blogs-month-subheading">Front Page Fame: July’s Blog That Shines</p>
+          <p class="blogs-month-title">Sustainable living is need of the hour!</p>
+          <p class="blogs-month-desc">
+            In an age of mounting environmental challenges, sustainable living has evolved from a choice to an urgent
+            necessity. It’s about making conscious decisions—opting for energy-efficient solutions, reducing waste,
+            embracing eco-friendly materials, and nurturing habits that protect our planet’s resources. From the food we
+            consume to the technologies we use, every small shift can create a ripple effect of positive change.
+            Adopting a sustainable lifestyle doesn’t mean sacrificing comfort; it means redefining it through balance,
+            innovation, and responsibility. The future we envision starts today—with thoughtful action and a deep
+            respect for the world we inhabit.
+          </p>
+          <div class="blog-btn-wrapper">
+            <a class="btn" href="blogs.html">Read here</a>
+          </div>
         </div>
       </div>
     </section>
+
+    <!-- Amazon Picks -->
     <section class="blog-preview">
       <div class="blogs-section-menu">
         <div id="fashion">
-          <img class="blogs-section-img" src="" alt="">
-          <h2>Nature and You</h2>
-          <p class="blogs-section-desc">Latest styling ideas to reinvent your wardrobe.</p>
-          <p class="blogs-section-desc">Feeling like your closet needs a refresh? The latest styling trends are all about mixing comfort, versatility, and bold personal expression. Think layered neutrals with standout accessories, reimagined denim silhouettes paired with oversized blazers, and a playful blend of vintage finds and modern minimalism. Capsule wardrobes are making a comeback, encouraging you to rotate key statement pieces with seasonal staples. Don’t shy away from color pops, asymmetrical cuts, or unexpected textures—styling today is about confidence and experimentation. In this post, we’ll explore how to curate looks that reflect you, while keeping things fresh, functional, and fashion-forward.</p>
-          <a href="blogs.html" class="btn">Read here</a>
+          <!-- <img class="blogs-section-img" src="" alt=""> -->
+          <h2 class="blogs-amazon-heading">Amazon Picks</h2>
+          <p class="blogs-amazon-heading-text">
+            This curated highlight serves up the best of Amazon—handpicked favorites that add value, spark joy, or
+            simply make life a little easier
+          </p>
+          <div class="blogs-amazon-section">
+            <p class="blogs-amazon-subheading">New & Worthy</p>
+            <ul class="product-list">
+              <li class="product-item">
+                <img src="/assets/img/product1.jpg" alt="Eco-Friendly Water Bottle" class="product-img">
+                <div class="product-info">
+                  <h4 class="product-title">Eco-Friendly Water Bottle</h4>
+                  <p class="product-desc">Stay hydrated and reduce plastic waste with this reusable, BPA-free water
+                    bottle. Perfect for travel, gym, and daily use.</p>
+                  <div class="blog-btn-wrapper">
+                    <a href="https://www.amazon.com/dp/example1" class="btn" target="_blank">View on Amazon</a>
+                  </div>
+                </div>
+              </li>
+              <li class="product-item">
+                <img src="/assets/img/product2.jpg" alt="Organic Cotton Tote Bag" class="product-img">
+                <div class="product-info">
+                  <h4 class="product-title">Organic Cotton Tote Bag</h4>
+                  <p class="product-desc">A stylish and sustainable alternative to plastic bags. Great for shopping,
+                    work, or a day out.</p>
+                  <div class="blog-btn-wrapper">
+                    <a href="https://www.amazon.com/dp/example2" class="btn" target="_blank">View on Amazon</a>
+                  </div>
+                </div>
+              </li>
+              <li class="product-item">
+                <img src="/assets/img/product3.jpg" alt="Solar Power Bank" class="product-img">
+                <div class="product-info">
+                  <h4 class="product-title">Solar Power Bank</h4>
+                  <p class="product-desc">Charge your devices on the go with clean solar energy. Ideal for outdoor
+                    adventures and emergencies.</p>
+                  <div class="blog-btn-wrapper">
+                    <a href="https://www.amazon.com/dp/example3" class="btn" target="_blank">View on Amazon</a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="blogs-amazon-section">
+            <p class="blogs-amazon-subheading">Best Picks</p>
+            <ul class="product-list">
+              <li class="product-item">
+                <img src="/assets/img/product1.jpg" alt="Eco-Friendly Water Bottle" class="product-img">
+                <div class="product-info">
+                  <h4 class="product-title">Eco-Friendly Water Bottle</h4>
+                  <p class="product-desc">Stay hydrated and reduce plastic waste with this reusable, BPA-free water
+                    bottle. Perfect for travel, gym, and daily use.</p>
+                  <div class="blog-btn-wrapper">
+                    <a href="https://www.amazon.com/dp/example1" class="btn" target="_blank">View on Amazon</a>
+                  </div>
+                </div>
+              </li>
+              <li class="product-item">
+                <img src="/assets/img/product2.jpg" alt="Organic Cotton Tote Bag" class="product-img">
+                <div class="product-info">
+                  <h4 class="product-title">Organic Cotton Tote Bag</h4>
+                  <p class="product-desc">A stylish and sustainable alternative to plastic bags. Great for shopping,
+                    work, or a day out.</p>
+                  <div class="blog-btn-wrapper">
+                    <a href="https://www.amazon.com/dp/example2" class="btn" target="_blank">View on Amazon</a>
+                  </div>
+                </div>
+              </li>
+              <li class="product-item">
+                <img src="/assets/img/product3.jpg" alt="Solar Power Bank" class="product-img">
+                <div class="product-info">
+                  <h4 class="product-title">Solar Power Bank</h4>
+                  <p class="product-desc">Charge your devices on the go with clean solar energy. Ideal for outdoor
+                    adventures and emergencies.</p>
+                  <div class="blog-btn-wrapper">
+                    <a href="https://www.amazon.com/dp/example3" class="btn" target="_blank">View on Amazon</a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="blogs-amazon-section">
+            <p class="blogs-amazon-subheading">Explore Categories</p>
+            <div class="category-cards">
+              <div class="category-card category-gradient eco">
+                <a href="https://www.amazon.com/s?k=eco+friendly" class="category-link">
+                  <span>Eco-Friendly</span>
+                </a>
+              </div>
+              <div class="category-card category-gradient gadgets">
+                <a href="https://www.amazon.com/s?k=home+gadgets" class="category-link">
+                  <span>Home Gadgets</span>
+                </a>
+              </div>
+              <div class="category-card category-gradient wellness">
+                <a href="https://www.amazon.com/s?k=wellness" class="category-link">
+                  <span>Wellness</span>
+                </a>
+              </div>
+            </div>
+            <div class="category-cards">
+              <div class="category-card category-gradient books">
+                <a href="https://www.amazon.com/s?k=books" class="category-link">
+                  <span>Books</span>
+                </a>
+              </div>
+              <div class="category-card category-gradient tech">
+                <a href="https://www.amazon.com/s?k=tech+gadgets" class="category-link">
+                  <span>Tech Gadgets</span>
+                </a>
+              </div>
+              <div class="category-card category-gradient kitchen">
+                <a href="https://www.amazon.com/s?k=kitchen+essentials" class="category-link">
+                  <span>Kitchen Essentials</span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <p class="blogs-amazon-subheading">Want to see more?</p>
+        <div class="blog-btn-wrapper">
+          <a class="btn" href="blogs.html">See All</a>
         </div>
       </div>
+      </div>
+    </section>
+
+    <!-- Fashion Forward -->
+    <section class="blog-preview">
+      <div class="blogs-section-menu">
+        <div id="fashion">
+          <!-- <img class="blogs-section-img" src="" alt=""> -->
+          <h2 class="blogs-amazon-heading">Fashion Forward</h2>
+          <p class="blogs-amazon-subheading">Latest styling ideas to reinvent your wardrobe.</p>
+          <!-- <p class="blogs-amazon-title">Feeling like your closet needs a refresh?</p> -->
+          <p class="blogs-amazon-desc">
+            The latest styling trends are all about mixing comfort, versatility, and bold personal expression. Think
+            layered neutrals with standout accessories, reimagined denim silhouettes paired with oversized blazers, and
+            a playful blend of vintage finds and modern minimalism. Capsule wardrobes are making a comeback, encouraging
+            you to rotate key statement pieces with seasonal staples. Don’t shy away from color pops, asymmetrical cuts,
+            or unexpected textures—styling today is about confidence and experimentation. In this post, we’ll explore
+            how to curate looks that reflect you, while keeping things fresh, functional, and fashion-forward.
+          </p>
+          <div class="blog-btn-wrapper">
+            <a class="btn" href="blogs.html">Read here</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Nature and You -->
+    <section class="blog-preview">
+      <div class="blogs-section-menu">
+        <div id="nature">
+          <!-- <img class="blogs-section-img" src="" alt=""> -->
+          <h2 class="blogs-amazon-heading">Nature and You</h2>
+          <p class="blogs-amazon-subheading">Sustainable living is need of the hour.</p>
+          <!-- <p class="blogs-amazon-title">Sustainable living is need of the hour!</p> -->
+          <p class="blogs-amazon-desc">
+            In an age of mounting environmental challenges, sustainable living has evolved from a choice to an urgent
+            necessity. It’s about making conscious decisions—opting for energy-efficient solutions, reducing waste,
+            embracing eco-friendly materials, and nurturing habits that protect our planet’s resources. From the food we
+            consume to the technologies we use, every small shift can create a ripple effect of positive change.
+            Adopting a sustainable lifestyle doesn’t mean sacrificing comfort; it means redefining it through balance,
+            innovation, and responsibility. The future we envision starts today—with thoughtful action and a deep
+            respect for the world we inhabit.
+          </p>
+          <div class="blog-btn-wrapper">
+            <a href="blogs.html" class="btn">Read here</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Fashion Forward (Duplicate?) -->
+    <section class="blog-preview">
+      
     </section>
   </main>
 </body>
