15Jul25|Blogs page|Added blog menu

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -12,10 +12,9 @@
 <body>
   <header>
     <div class="header-container">
-      <h1>The Ultimate World</h1>
+      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
       <nav>
         <ul>
-          <li><a href="/index.html">Home</a></li>
           <li><a href="/games/games.html">Games</a></li>
           <li><a href="/news/news.html">News</a></li>
           <li><a href="/blogs/blogs.html">Blogs</a></li>
@@ -26,11 +25,20 @@
     </div>
   </header>
   <main>
-    <section class="hero">
+    <section class="hero mini-hero">
       <h3>Reader’s Realm</h3>
       <p>Explore trending thoughts, smart ideas, and original articles you’ll love.</p>
-      <!-- <img class="hero-img" src="/assets/img/your-image.jpg" alt="Passion fruit and floral drink on a surface" /> -->
+      <nav class="category-menu">
+        <ul>
+          <li><a href="#amazon-picks">Amazon Picks</a></li>
+          <li><a href="#inspiration">Inspiration</a></li>
+          <li><a href="#travelling">Travelling</a></li>
+          <li><a href="#howto">How To</a></li>
+          <li><a href="#wellness">Wellness</a></li>
+        </ul>
+      </nav>
     </section>
+
 
     <!-- Blog of the Month -->
     <section class="blog-preview"
@@ -71,35 +79,41 @@
             <p class="blogs-amazon-subheading">New & Worthy</p>
             <ul class="product-list">
               <li class="product-item">
-                <img src="/assets/img/product1.jpg" alt="Eco-Friendly Water Bottle" class="product-img">
-                <div class="product-info">
-                  <h4 class="product-title">Eco-Friendly Water Bottle</h4>
-                  <p class="product-desc">Stay hydrated and reduce plastic waste with this reusable, BPA-free water
-                    bottle. Perfect for travel, gym, and daily use.</p>
-                  <div class="blog-btn-wrapper">
-                    <a href="https://www.amazon.com/dp/example1" class="btn" target="_blank">View on Amazon</a>
+                <div class="product-row">
+                  <img src="/assets/img/product1.jpg" alt="Eco-Friendly Water Bottle" class="product-img">
+                  <div class="product-info">
+                    <h4 class="product-title">Eco-Friendly Water Bottle</h4>
+                    <p class="product-desc">Stay hydrated and reduce plastic waste with this reusable, BPA-free water
+                      bottle. Perfect for travel, gym, and daily use.</p>
+                    <div class="blog-btn-wrapper">
+                      <a href="https://www.amazon.com/dp/example1" class="btn" target="_blank">View on Amazon</a>
+                    </div>
                   </div>
                 </div>
               </li>
               <li class="product-item">
-                <img src="/assets/img/product2.jpg" alt="Organic Cotton Tote Bag" class="product-img">
-                <div class="product-info">
-                  <h4 class="product-title">Organic Cotton Tote Bag</h4>
-                  <p class="product-desc">A stylish and sustainable alternative to plastic bags. Great for shopping,
-                    work, or a day out.</p>
-                  <div class="blog-btn-wrapper">
-                    <a href="https://www.amazon.com/dp/example2" class="btn" target="_blank">View on Amazon</a>
+                <div class="product-row">
+                  <img src="/assets/img/product2.jpg" alt="Organic Cotton Tote Bag" class="product-img">
+                  <div class="product-info">
+                    <h4 class="product-title">Organic Cotton Tote Bag</h4>
+                    <p class="product-desc">A stylish and sustainable alternative to plastic bags. Great for shopping,
+                      work, or a day out.</p>
+                    <div class="blog-btn-wrapper">
+                      <a href="https://www.amazon.com/dp/example2" class="btn" target="_blank">View on Amazon</a>
+                    </div>
                   </div>
                 </div>
               </li>
               <li class="product-item">
-                <img src="/assets/img/product3.jpg" alt="Solar Power Bank" class="product-img">
-                <div class="product-info">
-                  <h4 class="product-title">Solar Power Bank</h4>
-                  <p class="product-desc">Charge your devices on the go with clean solar energy. Ideal for outdoor
-                    adventures and emergencies.</p>
-                  <div class="blog-btn-wrapper">
-                    <a href="https://www.amazon.com/dp/example3" class="btn" target="_blank">View on Amazon</a>
+                <div class="product-row">
+                  <img src="/assets/img/product3.jpg" alt="Solar Power Bank" class="product-img">
+                  <div class="product-info">
+                    <h4 class="product-title">Solar Power Bank</h4>
+                    <p class="product-desc">Charge your devices on the go with clean solar energy. Ideal for outdoor
+                      adventures and emergencies.</p>
+                    <div class="blog-btn-wrapper">
+                      <a href="https://www.amazon.com/dp/example3" class="btn" target="_blank">View on Amazon</a>
+                    </div>
                   </div>
                 </div>
               </li>
@@ -109,35 +123,41 @@
             <p class="blogs-amazon-subheading">Best Picks</p>
             <ul class="product-list">
               <li class="product-item">
-                <img src="/assets/img/product1.jpg" alt="Eco-Friendly Water Bottle" class="product-img">
-                <div class="product-info">
-                  <h4 class="product-title">Eco-Friendly Water Bottle</h4>
-                  <p class="product-desc">Stay hydrated and reduce plastic waste with this reusable, BPA-free water
-                    bottle. Perfect for travel, gym, and daily use.</p>
-                  <div class="blog-btn-wrapper">
-                    <a href="https://www.amazon.com/dp/example1" class="btn" target="_blank">View on Amazon</a>
+                <div class="product-row">
+                  <img src="/assets/img/product1.jpg" alt="Eco-Friendly Water Bottle" class="product-img">
+                  <div class="product-info">
+                    <h4 class="product-title">Eco-Friendly Water Bottle</h4>
+                    <p class="product-desc">Stay hydrated and reduce plastic waste with this reusable, BPA-free water
+                      bottle. Perfect for travel, gym, and daily use.</p>
+                    <div class="blog-btn-wrapper">
+                      <a href="https://www.amazon.com/dp/example1" class="btn" target="_blank">View on Amazon</a>
+                    </div>
                   </div>
                 </div>
               </li>
               <li class="product-item">
-                <img src="/assets/img/product2.jpg" alt="Organic Cotton Tote Bag" class="product-img">
-                <div class="product-info">
-                  <h4 class="product-title">Organic Cotton Tote Bag</h4>
-                  <p class="product-desc">A stylish and sustainable alternative to plastic bags. Great for shopping,
-                    work, or a day out.</p>
-                  <div class="blog-btn-wrapper">
-                    <a href="https://www.amazon.com/dp/example2" class="btn" target="_blank">View on Amazon</a>
+                <div class="product-row">
+                  <img src="/assets/img/product2.jpg" alt="Organic Cotton Tote Bag" class="product-img">
+                  <div class="product-info">
+                    <h4 class="product-title">Organic Cotton Tote Bag</h4>
+                    <p class="product-desc">A stylish and sustainable alternative to plastic bags. Great for shopping,
+                      work, or a day out.</p>
+                    <div class="blog-btn-wrapper">
+                      <a href="https://www.amazon.com/dp/example2" class="btn" target="_blank">View on Amazon</a>
+                    </div>
                   </div>
                 </div>
               </li>
               <li class="product-item">
-                <img src="/assets/img/product3.jpg" alt="Solar Power Bank" class="product-img">
-                <div class="product-info">
-                  <h4 class="product-title">Solar Power Bank</h4>
-                  <p class="product-desc">Charge your devices on the go with clean solar energy. Ideal for outdoor
-                    adventures and emergencies.</p>
-                  <div class="blog-btn-wrapper">
-                    <a href="https://www.amazon.com/dp/example3" class="btn" target="_blank">View on Amazon</a>
+                <div class="product-row">
+                  <img src="/assets/img/product3.jpg" alt="Solar Power Bank" class="product-img">
+                  <div class="product-info">
+                    <h4 class="product-title">Solar Power Bank</h4>
+                    <p class="product-desc">Charge your devices on the go with clean solar energy. Ideal for outdoor
+                      adventures and emergencies.</p>
+                    <div class="blog-btn-wrapper">
+                      <a href="https://www.amazon.com/dp/example3" class="btn" target="_blank">View on Amazon</a>
+                    </div>
                   </div>
                 </div>
               </li>
@@ -196,7 +216,7 @@
         <div id="fashion">
           <!-- <img class="blogs-section-img" src="" alt=""> -->
           <h2 class="blogs-amazon-heading">Fashion Forward</h2>
-          <p class="blogs-amazon-subheading">Latest styling ideas to reinvent your wardrobe.</p>
+          <p class="blogs-amazon-subheading">Latest styling ideas to reinvent your wardrobe</p>
           <!-- <p class="blogs-amazon-title">Feeling like your closet needs a refresh?</p> -->
           <p class="blogs-amazon-desc">
             The latest styling trends are all about mixing comfort, versatility, and bold personal expression. Think
@@ -219,7 +239,8 @@
         <div id="nature">
           <!-- <img class="blogs-section-img" src="" alt=""> -->
           <h2 class="blogs-amazon-heading">Nature and You</h2>
-          <p class="blogs-amazon-subheading">Sustainable living is need of the hour.</p>
+          <br>
+          <p class="blogs-amazon-subheading">Sustainable living is need of the hour!</p>
           <!-- <p class="blogs-amazon-title">Sustainable living is need of the hour!</p> -->
           <p class="blogs-amazon-desc">
             In an age of mounting environmental challenges, sustainable living has evolved from a choice to an urgent
@@ -239,7 +260,7 @@
 
     <!-- Fashion Forward (Duplicate?) -->
     <section class="blog-preview">
-      
+
     </section>
   </main>
 </body>
