16Jul25|Blogs page|Added how to section and pages

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -31,11 +31,11 @@
       <p>Explore trending thoughts, smart ideas, and original articles you’ll love.</p>
       <nav class="blogs-main-category-menu">
         <ul>
-          <li><a href="#amazon-picks">Amazon Picks</a></li>
-          <li><a href="#inspiration">Inspiration</a></li>
-          <li><a href="#travelling">Travelling</a></li>
-          <li><a href="#howto">How To</a></li>
-          <li><a href="#wellness">Wellness</a></li>
+          <li><a href="/blogs/amazon/amaz.html">Amazon Picks</a></li>
+          <li><a href="/blogs/inspiration/inspiration.html">Inspiration</a></li>
+          <li><a href="/blogs/travel/travel.html">Travelling</a></li>
+          <li><a href="/blogs/howto/howto.html">How To</a></li>
+          <li><a href="/blogs/fashion/fashion.html">Fashion</a></li>
         </ul>
       </nav>
     </section>
@@ -205,7 +205,7 @@
         </div>
         <p class="blogs-amazon-subheading">Want to see more?</p>
         <div class="blogs-btn-wrapper">
-          <a class="btn" href="blogs.html">See All</a>
+          <a class="btn" href="\blogs\amazon\amaz.html">See All</a>
         </div>
       </div>
     </section>
@@ -215,14 +215,14 @@
       <div class="blogs-section-menu">
         <div id="travel">
           <!-- <img class="blogs-section-img" src="" alt=""> -->
-          <h2 class="blogs-amazon-heading">Travel Blog</h2>
+          <h2 class="blogs-amazon-heading">Travelling</h2>
           <p class="blogs-amazon-heading-text">
             Wander far, live deep, and let every journey tell a story worth sharing.
           </p>
           <div class="blogs-amazon-section">
           <p class="blogs-amazon-subheading">Latest</p>
           <ul class="product-list">
-              <li class="product-item" style="background-image: url('/assets/img/blogs/bg-fireflies.png'); background-size: cover; background-position: center;">
+              <li class="product-item" style="background-image: url('/assets/img/blogs/travel/bg-fireflies.png'); background-size: cover; background-position: center;">
                 <div class="product-row">
                   <div class="product-info">
                     <h4 class="travel-title">Dancing with The Fireflies</h4>
@@ -233,7 +233,7 @@
                   </div>
                 </div>
               </li>
-              <li class="product-item" style="background-image: url('/assets/img/blogs/bg-goa.png'); background-size: cover; background-position: center;">
+              <li class="product-item" style="background-image: url('/assets/img/blogs/travel/bg-goa.png'); background-size: cover; background-position: center;">
                 <div class="product-row">
                   <div class="product-info">
                     <h4 class="travel-title">The Peaceful Shores of Goa</h4>
@@ -245,7 +245,7 @@
                   </div>
                 </div>
               </li>
-              <li class="product-item" style="background-image: url('/assets/img/blogs/bg-lonavala.png'); background-size: cover; background-position: center;">
+              <li class="product-item" style="background-image: url('/assets/img/blogs/travel/bg-lonavala.png'); background-size: cover; background-position: center;">
                 <div class="product-row">
                   <div class="product-info">
                     <h4 class="travel-title">Mystery of Clouds in Lonavala</h4>
@@ -265,34 +265,34 @@
             <p class="blogs-amazon-subheading">Explore Categories</p>
             <div class="category-cards">
               <div class="category-card category-gradient eco">
-                <a href="\blogs\travel\beaches.html" class="category-link">
+                <a href="\blogs\travel\beaches\beaches.html" class="category-link">
                   <span>Beaches</span>
                 </a>
               </div>
               <div class="category-card category-gradient gadgets">
-                <a href="\blogs\travel\mountains.html" class="category-link">
+                <a href="\blogs\travel\mountains\mountains.html" class="category-link">
                   <span>Mountains</span>
                 </a>
               </div>
               <div class="category-card category-gradient wellness">
-                <a href="\blogs\travel\wilderness.html" class="category-link">
+                <a href="\blogs\travel\wilderness\wilderness.html" class="category-link">
                   <span>Wilderness</span>
                 </a>
               </div>
             </div>
             <div class="category-cards">
               <div class="category-card category-gradient books">
-                <a href="\blogs\travel\rivers.html" class="category-link">
+                <a href="\blogs\travel\rivers\rivers.html" class="category-link">
                   <span>Rivers</span>
                 </a>
               </div>
               <div class="category-card category-gradient tech">
-                <a href="\blogs\travel\historic.html" class="category-link">
+                <a href="\blogs\travel\historic\historic.html" class="category-link">
                   <span>Historic</span>
                 </a>
               </div>
               <div class="category-card category-gradient kitchen">
-                <a href="\blogs\travel\romantic.html" class="category-link">
+                <a href="\blogs\travel\romantic\romantic.html" class="category-link">
                   <span>Romantic</span>
                 </a>
               </div>
@@ -302,7 +302,101 @@
         </div>
         <p class="blogs-amazon-subheading">Want to see more?</p>
         <div class="blogs-btn-wrapper">
-          <a class="btn" href="blogs.html">See All</a>
+          <a class="btn" href="\blogs\travel\travel.html">See All</a>
+        </div>
+    </section>
+
+    <!-- How To -->
+    <section class="blogs-preview">
+      <div class="blogs-section-menu">
+        <div id="travel">
+          <!-- <img class="blogs-section-img" src="" alt=""> -->
+          <h2 class="blogs-amazon-heading">How To</h2>
+          <p class="blogs-amazon-heading-text">
+            From curious minds to clever hands, every “how” opens the door to discovery. A guide not just for doing—but for understanding, evolving, and creating.
+          </p>
+          <div class="blogs-amazon-section">
+          <p class="blogs-amazon-subheading">Recommended</p>
+          <ul class="product-list">
+              <li class="product-item" style="background-image: url('/assets/img/blogs/howto/bg-git.png'); background-size: cover; background-position: center;">
+                <div class="product-row">
+                  <div class="product-info">
+                    <h4 class="travel-title">Easy Git Setup</h4>
+                    <p class="travel-desc">Getting started with Git is simpler than you think—just a few steps and you're version-controlling like a pro. Whether you're syncing code, tracking changes, or collaborating across projects, this streamlined setup gets you from zero to commit in no time.</p>
+                    <div class="blogs-btn-wrapper">
+                      <a href="\blogs\howto\software\how-to-use-git.html" class="btn">Read More</a>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="product-item" style="background-image: url('/assets/img/blogs/howto/bg-keyboard.png'); background-size: cover; background-position: center;">
+                <div class="product-row">
+                  <div class="product-info">
+                    <h4 class="travel-title">Keyboard Shortcuts</h4>
+                    <p class="travel-desc">From copy-paste basics to advanced navigation in apps and browsers, these shortcuts streamline your workflow, reduce repetitive actions, and keep your focus flowing.</p>
+                    <div class="blogs-btn-wrapper">
+                      <a href="\blogs\howto\tools\keyboard-shortcuts.html" class="btn">Read More</a> 
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="product-item" style="background-image: url('/assets/img/blogs/howto/bg-goa.png'); background-size: cover; background-position: center;">
+                <div class="product-row">
+                  <div class="product-info">
+                    <h4 class="travel-title">Keyboard Shortcuts</h4>
+                    <p class="travel-desc">From copy-paste basics to advanced navigation in apps and browsers, these shortcuts streamline your workflow, reduce repetitive actions, and keep your focus flowing.</p>
+                    <div class="blogs-btn-wrapper">
+                      <a href="\blogs\howto\tools\keyboard-shortcuts.html" class="btn">Read More</a> 
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="blogs-amazon-section">
+            <p class="blogs-amazon-subheading">Explore Categories</p>
+            <div class="category-cards">
+              <div class="category-card category-gradient eco">
+                <a href="\blogs\howto\software\software.html" class="category-link">
+                  <span>Software</span>
+                </a>
+              </div>
+              <div class="category-card category-gradient gadgets">
+                <a href="\blogs\howto\hardware\hardware.html" class="category-link">
+                  <span>Hardware</span>
+                </a>
+              </div>
+              <div class="category-card category-gradient wellness">
+                <a href="\blogs\howto\tools\tools.html" class="category-link">
+                  <span>Tools</span>
+                </a>
+              </div>
+            </div>
+            <div class="category-cards">
+              <div class="category-card category-gradient books">
+                <a href="\blogs\howto\design\design.html" class="category-link">
+                  <span>Design</span>
+                </a>
+              </div>
+              <div class="category-card category-gradient tech">
+                <a href="\blogs\howto\cooking\cooking.html" class="category-link">
+                  <span>Cooking</span>
+                </a>
+              </div>
+              <div class="category-card category-gradient kitchen">
+                <a href="\blogs\howto\everyday\everyday.html" class="category-link">
+                  <span>Everyday</span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <p class="blogs-amazon-subheading">Want to explore more?</p>
+        <div class="blogs-btn-wrapper">
+          <a class="btn" href="/blogs/howto/howto.html">See All</a>
         </div>
     </section>
 
