--- a/blogs/howto/tools/tools.html
+++ b/blogs/howto/tools/tools.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mystery of Clouds in Lonavala | Travel Blog</title>
+  <title>Tools | How To</title>
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/blogs.css" />
   <script src="/js/script.js" defer></script>
 </head>
-
 <body>
   <header>
     <div class="header-container">
@@ -27,11 +25,9 @@
   </header>
   <main>
     <section>
-      <h2>Travelling</h2>
-      <p>Mist wraps the hills like a secret, and the clouds drift low, whispering tales only silence understands. Each breath of fog feels like a hidden chapter unfolding across the ridges.</p>
-      <p>(Full story coming soon!)</p>
+      <h2>Tools</h2>
+      <p>Discover and learn about useful tools for every task. (Content coming soon!)</p>
     </section>
   </main>
 </body>
-
 </html>
