--- a/blogs/howto/howto.html
+++ b/blogs/howto/howto.html
@@ -26,7 +26,11 @@
   <main>
     <section>
       <h2>How To</h2>
-      <p>Explore a variety of how-to guides, tips, and tutorials for every interest. (Content coming soon!)</p>
+      <p>Explore a variety of how-to guides, tips, and tutorials for every interest. (Content coming soon!)
+
+<a href="/tools/software/how-to-use-git.html">how-to-use-git</a>
+<a href="/tools/software/how-to-use-abc.html">how-to-use-abc</a>
+</p>
     </section>
   </main>
 </body>
